--- a/css/leon.css
+++ b/css/leon.css
@@ -385,6 +385,7 @@ body {
 .contact {
   padding-top: var(--section-padding);
   padding-bottom: var(--section-padding);
+  background-color: var(--section-background);
 }
 .contact .info {
   padding-top: var(--section-padding);
